<resources>
    <string name="app_name">My_school</string>
    <string name="help_description">Tel: 777453038 mail:madikaba2004@gmail.com. Cette application permet de prsenter ISI, les filieres existantes. Elle donne la possibilte aux etudiants de faire une demande d\'inscriptions, de visualiserleurs notes ainsi que les institut du groupe ISI sur une carte Google Maps..</string>
    <string name="description">Situé au km1 avenue cheikh Anta Diop, l\'institut supérieur d\'informatique ISI, est sous la tutelle du Ministère de l\'Enseignement Supérieur privé qui est signataire de tous les diplomes délivrés, sous le controle de l\'ANAQ-Sup.
L\'ISI, contribue depuis plus de 27 ans a la formation des jeunes cadres africains.
Avec l\'ambition du PDG, de participer a la diversification de l\'offre de formation au Sénégal et dans la sous-région, l\'ISI a su se développer au fil des ans, comptant ainsi en son sein 09 campus, ou se cotoient plus de trente nationalités, qui constituent la belle famille isienne.
Le groupe dispose des experts de très haut niveau universitaire et spécialistes dans plusieurs domaines de l\'Informatique et de la gestion.
Grace a son expertise et la qualité de ses services, Le Groupe ISI délivre des diplomes de Licence et Master reconnus a la fois par le monde de l\'entreprise et par les instances d\'accréditation nationales « ANAQ SUP »et panafricaines « CAMES ».
Avec une offre de formation diversifiée dans les métiers d\'avenir, une innovation permanente de ses programmes, et les brillants résultats obtenus aux différents examens et concours, L\'Institut Supérieur d\'informatique  » ISI » est leader dans son domaine au Sénégal et dans la sous-région.
    </string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="delete_user">Delete User</string>
    <string name="list_user">List User</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">CONNECT</string>
    <string name="connection">Connection</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">isi@isi.com</string>
    <string name="presentation">Presentation</string>
    <string name="formation">Formations</string>
    <string name="mark">Mark</string>
    <string name="university">University</string>
    <string name="event">Event</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="degrees">Degrees</string>
    <string name="o_level">0 Level</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="wait">Please wait</string>
    <string name="error_field">Required Field</string>
    <string name="error_connection">Connection error</string>
    <string name="error_parameters">Error Parameters</string>
    <string name="success_inscription">Inscription Success</string>
    <string name="error_inscription">Inscription Failed</string>
    <string name="error_create">User not Create</string>
    <string name="error_update">User not Updated</string>
    <string name="error_delete">User not Deleted</string>
    <string name="error_list">User not Listed</string>
    <string name="success_create">User Create</string>
    <string name="success_update">User Update</string>
    <string name="success_delete">User Deleted</string>
    <string name="success_list">User Listed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_university_fragment">UniversityFragment</string>
</resources>