<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dim_all"
    tools:context=".InscriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:gravity="center"
        android:textSize="@dimen/dim_title"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription" />

    <EditText
        android:id="@+id/txtFirsttName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtLastName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/degrees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cb0Level"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/o_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/cbBachelor"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/bachelor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/cbMaster"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_marginTop="@dimen/dim_top"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>