<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dim_all"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/dim_title"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/txtLoginDb"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPasswordDb"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnAdd"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_dark"
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnUpdate"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_primary"
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/update_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnDelete"
        android:textColor="@color/white"
        android:backgroundTint="#ce3300"
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnList"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_dark"
        android:layout_marginRight="@dimen/dim_right"
        android:layout_marginLeft="@dimen/dim_left"
        android:text="@string/delete_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</androidx.appcompat.widget.LinearLayoutCompat>